# dynamic_grasping

./: README.md  ros2.bash
src/franka_interfaces/: CMakeLists.txt  package.xml
src/franka_interfaces/msg/: RobotState.msg
src/franka_interfaces/srv/: CartMotionTime.srv  FrankaHand.srv  JointMotionVel.srv  PosePath.srv
src/franka_motion/: CMakeLists.txt  package.xml
src/franka_motion/include/franka_motion/: PoseGenerator.h  Robot.h  RobotServer.hpp  SpeedProfile.h  StopCondition.h  liborl.h
src/franka_motion/src/: Payload.cpp  Pose.cpp  PoseGenerator.cpp  Robot.cpp  RobotNode.cpp  RobotServer.cpp  SCurve.cpp  SpeedProfile.cpp  StopCondition.cpp  examples_common.cpp  geometry_math.cpp
src/prediction_client/: package.xml  setup.cfg  setup.py
src/prediction_client/prediction_client/: box_corners.py  relay_control.py  srt_serial.py  test_franka_motion_read_states.py  test_franka_motion_server_vision.py  test_franka_motion_server_vision_jiahui.py  test_franka_motion_server_vision_predict.py
src/prediction_client/prediction_client/motion_prediction/: best_model_circular.pt  best_model_linear.pt  prediction.py
src/prediction_client/prediction_client/yolov5_detect/: rstest.py
src/prediction_client/prediction_client/yolov5_detect/config/: yolov5s.yaml
src/py_srvcli/: package.xml  setup.py
src/py_srvcli/py_srvcli/: test_franka_motion_server.py  test_franka_motion_server_vision.py
